jscomp/syntax/tests/parsing/errors/typexpr/bsObjSugar.res
type state = {
  "url"
  "protocols": array<string>
}

type state = {
  @attr "url"
  "protocols": array<string>
}

type state = {
  "url": string,
  "protocols"
  "websocket": Websocket.t,
}

type state = {
  "url": string,
  "protocols"
}

type state = {
  @bs.meth
  "send": string =>
}

type state = {
  "age": ,
  "name": string
}

type state = {
  @bs.set "age": ,
  "name": string
}

type state = {.. "age": }
type state = {
  ..
  "age" 
  "name": string
}

type websocket = {
  "id":
  "channel": channelTyp
}

type websocket = {
  "id"
